// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RentalAssistance matches snapshot 1`] = `
<Fragment>
  <RentalAssistanceTable
    applicationMembers={
      Array [
        Object {
          "first_name": "Test",
          "id": "123",
          "last_name": "Tester",
        },
      ]
    }
    form={
      Object {
        "batch": [Function],
        "blur": [Function],
        "change": [Function],
        "destroyOnUnregister": false,
        "focus": [Function],
        "getFieldState": [Function],
        "getRegisteredFields": [Function],
        "getState": [Function],
        "initialize": [Function],
        "isValidationPaused": [Function],
        "mutators": Object {},
        "pauseValidation": [Function],
        "registerField": [Function],
        "reset": [Function],
        "resetFieldState": [Function],
        "restart": [Function],
        "resumeValidation": [Function],
        "setConfig": [Function],
        "submit": [Function],
        "subscribe": [Function],
      }
    }
    onCancelEdit={[Function]}
    onDelete={[Function]}
    onSave={[Function]}
    rentalAssistances={
      Array [
        Object {
          "assistance_amount": "100",
          "recipient": "123",
          "recurring_assistance": "Yes",
          "type_of_assistance": "Compass Family",
        },
      ]
    }
  />
  <Component
    expand={true}
  >
    <Component>
      <Button
        id="add-rental-assistance"
        onClick={[Function]}
        small={true}
        text="Add Rental Assistance"
      />
      <div
        className="margin-top--half"
      />
      <HelpText
        note="Rental Assistance includes recurring vouchers and subsidies, as well as one-time grants and other assistance."
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`RentalAssistanceForm when it already exists on salesforce matches snapshot 1`] = `
<InlineModal
  id="rental-assistance-edit-form-0"
  marginBottom={false}
  whiteBackground={true}
>
  <Component
    expand={true}
  >
    <Component>
      <SelectField
        className="rental-assistance-recipient"
        fieldName="rental_assistances.0.recipient"
        label="Recipient"
        options={
          Array [
            Object {
              "label": "Test Tester",
              "value": "123",
            },
          ]
        }
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <SelectField
        className="rental-assistance-type"
        fieldName="rental_assistances.0.type_of_assistance"
        label="Type of Assistance"
        options={
          Array [
            Object {
              "label": "Catholic Charities",
              "value": "Catholic Charities",
            },
            Object {
              "label": "Compass Family",
              "value": "Compass Family",
            },
            Object {
              "label": "Glide",
              "value": "Glide",
            },
            Object {
              "label": "Hamilton Family",
              "value": "Hamilton Family",
            },
            Object {
              "label": "Homeless Prenatal",
              "value": "Homeless Prenatal",
            },
            Object {
              "label": "HOPWA",
              "value": "HOPWA",
            },
            Object {
              "label": "Q Foundation: First Month’s Rent",
              "value": "Q Foundation: First Month’s Rent",
            },
            Object {
              "label": "Q Foundation: Move-in Deposit",
              "value": "Q Foundation: Move-in Deposit",
            },
            Object {
              "label": "Q Foundation: Person with Disability Rent Subsidy",
              "value": "Q Foundation: Person with Disability Rent Subsidy",
            },
            Object {
              "label": "Q Foundation: Senior Rent Subsidy",
              "value": "Q Foundation: Senior Rent Subsidy",
            },
            Object {
              "label": "San Francisco AIDS Foundation",
              "value": "San Francisco AIDS Foundation",
            },
            Object {
              "label": "Section 8 HCV (tenant) voucher",
              "value": "Section 8 HCV (tenant) voucher",
            },
            Object {
              "label": "Self-Help for the Elderly",
              "value": "Self-Help for the Elderly",
            },
            Object {
              "label": "VASH voucher",
              "value": "VASH voucher",
            },
            Object {
              "label": "Other",
              "value": "Other",
            },
          ]
        }
        validation={[Function]}
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <CurrencyField
        fieldName="rental_assistances.0.assistance_amount"
        id="assistance_amount"
        label="Assistance Amount"
        validation={[Function]}
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <YesNoRadioGroup
        className="rental-assistance-recurring"
        falseValue="No"
        fieldName="rental_assistances.0.recurring_assistance"
        label="Recurring Assistance"
        trueValue="Yes"
        uniqId="new"
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <div
      className="form-grid_item column"
    >
      <Button
        classes="primary margin-right"
        disabled={false}
        id="rental-assistance-save"
        noBottomMargin={true}
        onClick={[Function]}
        text="Save"
        tiny={true}
      />
      <Button
        classes="secondary"
        disabled={false}
        id="rental-assistance-cancel"
        noBottomMargin={true}
        onClick={[MockFunction]}
        text="Cancel"
        tiny={true}
      />
      <Button
        classes="alert-fill right"
        disabled={false}
        id="rental-assistance-delete"
        noBottomMargin={true}
        onClick={[MockFunction]}
        text="Delete"
        tiny={true}
      />
    </div>
  </Component>
</InlineModal>
`;

exports[`RentalAssistanceForm when it is new matches snapshot 1`] = `
<InlineModal
  id="rental-assistance-new-form"
  marginBottom={true}
  whiteBackground={true}
>
  <Component
    expand={true}
  >
    <Component>
      <SelectField
        className="rental-assistance-recipient"
        fieldName="rental_assistances.0.recipient"
        label="Recipient"
        options={
          Array [
            Object {
              "label": "Test Tester",
              "value": "123",
            },
          ]
        }
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <SelectField
        className="rental-assistance-type"
        fieldName="rental_assistances.0.type_of_assistance"
        label="Type of Assistance"
        options={
          Array [
            Object {
              "label": "Catholic Charities",
              "value": "Catholic Charities",
            },
            Object {
              "label": "Compass Family",
              "value": "Compass Family",
            },
            Object {
              "label": "Glide",
              "value": "Glide",
            },
            Object {
              "label": "Hamilton Family",
              "value": "Hamilton Family",
            },
            Object {
              "label": "Homeless Prenatal",
              "value": "Homeless Prenatal",
            },
            Object {
              "label": "HOPWA",
              "value": "HOPWA",
            },
            Object {
              "label": "Q Foundation: First Month’s Rent",
              "value": "Q Foundation: First Month’s Rent",
            },
            Object {
              "label": "Q Foundation: Move-in Deposit",
              "value": "Q Foundation: Move-in Deposit",
            },
            Object {
              "label": "Q Foundation: Person with Disability Rent Subsidy",
              "value": "Q Foundation: Person with Disability Rent Subsidy",
            },
            Object {
              "label": "Q Foundation: Senior Rent Subsidy",
              "value": "Q Foundation: Senior Rent Subsidy",
            },
            Object {
              "label": "San Francisco AIDS Foundation",
              "value": "San Francisco AIDS Foundation",
            },
            Object {
              "label": "Section 8 HCV (tenant) voucher",
              "value": "Section 8 HCV (tenant) voucher",
            },
            Object {
              "label": "Self-Help for the Elderly",
              "value": "Self-Help for the Elderly",
            },
            Object {
              "label": "VASH voucher",
              "value": "VASH voucher",
            },
            Object {
              "label": "Other",
              "value": "Other",
            },
          ]
        }
        validation={[Function]}
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <CurrencyField
        fieldName="rental_assistances.0.assistance_amount"
        id="assistance_amount"
        label="Assistance Amount"
        validation={[Function]}
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <Component>
      <YesNoRadioGroup
        className="rental-assistance-recurring"
        falseValue="No"
        fieldName="rental_assistances.0.recurring_assistance"
        label="Recurring Assistance"
        trueValue="Yes"
        uniqId="new"
      />
    </Component>
  </Component>
  <Component
    expand={true}
  >
    <div
      className="form-grid_item column"
    >
      <Button
        classes="primary margin-right"
        disabled={false}
        id="rental-assistance-save"
        noBottomMargin={true}
        onClick={[Function]}
        text="Save"
        tiny={true}
      />
      <Button
        classes="secondary"
        disabled={false}
        id="rental-assistance-cancel"
        noBottomMargin={true}
        onClick={[MockFunction]}
        text="Cancel"
        tiny={true}
      />
    </div>
  </Component>
</InlineModal>
`;
